[metadata]
name = ziamath
version = attr: ziamath.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://ziamath.readthedocs.io
description = Render MathML and LaTeX Math to SVG in pure Python without Latex installation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MathML, LaTeX, math, font, truetype, opentype, svg
license = MIT
project_urls =
    Documentation = https://ziamath.readthedocs.io
    Source Code = https://github.com/cdelker/ziamath
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
zip_safe = True
python_requires = >= 3.8
include_package_data = True
install_requires =
    ziafont>=0.5
    latex2mathml

[options.package_data]
ziamath = 
    py.typed
ziamath.fonts =
    *.ttf
    *.otf
